# fastrpc

./: .clang-format  .gitignore  Makefile.am  README.md  configure.ac
.github/actions/build_docker_image/: action.yml
.github/actions/lava_job_render/: action.yml
.github/actions/loading/: action.yml
.github/actions/sync/: action.yml
.github/workflows/: loading.yml  pkg-build-pr-check.yml  pre_merge.yml  pull_request_check.yml  qcom-preflight-checks.yml  run_armor.yml  sync_build.yml  test.yml
Docs/: daemons.md  qda_accel_driver.md
Docs/schemas/: fastrpc-config-schema.yaml
ci/: MACHINES.json  build.sh
debian/: README.source  adsprpcd.service  cdsprpcd.service  changelog  control  copyright  fastrpc-support.install  fastrpc-support.postinst  fastrpc-support.udev  fastrpc-tests.install  fastrpc-tests.lintian-overrides  guess-dsp.sh  libfastrpc1.lintian-overrides  libfastrpc1.postinst  not-installed  qcom-fastrpc1.install  rules  watch
debian/patches/: dlopen-abi-version  open-shell-path  series  test-paths
debian/upstream/: metadata
files/: 60-fastrpc.rules  71-fastrpc.rules  Makefile.am  README.md  adsprpcd.service  adsprpcd_audiopd.service  cdsp1rpcd.service  cdsprpcd.service  gdsp0rpcd.service  gdsp1rpcd.service  machine_dsp_paths.ini  sdsprpcd.service
inc/: AEEBufBound.h  AEEQList.h  AEEStdDef.h  AEEStdErr.h  AEEstd.h  HAP_debug.h  HAP_farf.h  HAP_pls.h  Makefile.am  adsp_current_process.h  adsp_current_process1.h  adsp_default_listener1.h  adsp_listener.h  adsp_listener1.h  adsp_perf.h  adsp_perf1.h  adsp_pls.h  adspmsgd_adsp.h  adspmsgd_adsp1.h  adspmsgd_apps.h  adspmsgd_internal.h  apps_mem.h  apps_remotectl.h  apps_std.h  apps_std_internal.h  dspqueue.h  dspqueue_rpc.h  dspqueue_shared.h  dspsignal.h  fastrpc_android.h  fastrpc_apps_user.h  fastrpc_async.h  fastrpc_cap.h  fastrpc_common.h  fastrpc_config.h  fastrpc_config_parser.h  fastrpc_device_discovery.h  fastrpc_hash_table.h  fastrpc_internal.h  fastrpc_ioctl.h  (+25 more)
inc/misc/: fastrpc.h
public_headers/: config.yml
src/: BufBound.c  Makefile.am  adsp_current_process1_stub.c  adsp_current_process_stub.c  adsp_default_listener.c  adsp_default_listener1_stub.c  adsp_default_listener_stub.c  adsp_listener1_stub.c  adsp_listener_stub.c  adsp_perf1_stub.c  adsp_perf_stub.c  adspmsgd.c  adspmsgd_adsp1_stub.c  adspmsgd_adsp_stub.c  adspmsgd_apps_skel.c  adspmsgd_printf.c  apps_mem_imp.c  apps_mem_skel.c  apps_remotectl_skel.c  apps_std_imp.c  apps_std_skel.c  dsprpcd.c  dspsignal.c  fastrpc_android.c  fastrpc_apps_user.c  fastrpc_async.c  fastrpc_cap.c  fastrpc_config.c  fastrpc_config_parser.c  fastrpc_context.c  fastrpc_device_discovery.c  fastrpc_ioctl.c  fastrpc_ioctl_drm.c  fastrpc_latency.c  fastrpc_log.c  fastrpc_mem.c  fastrpc_notif.c  fastrpc_perf.c  fastrpc_pm.c  fastrpc_procbuf.c  (+16 more)
src/dspqueue/: dspqueue_cpu.c  dspqueue_rpc_stub.c
test/: Makefile.am  README.md  dsp_check.c  dsp_check_doc.md  fastrpc_test.c
