# Systemd service files

# Define systemd unit directory
systemdsystemunitdir = @systemdsystemunitdir@

# List of systemd service files to install
dist_systemdsystemunit_DATA = \
	adsprpcd.service \
	adsprpcd_audiopd.service \
	cdsprpcd.service \
	cdsp1rpcd.service \
	gdsp0rpcd.service \
	gdsp1rpcd.service \
	sdsprpcd.service

# udev rules

# Define udev rules directory
udevrulesdir = @udevrulesdir@

# List of udev rules files to install
dist_udevrules_DATA = \
	71-fastrpc.rules
